# DataBase-server

./: CMakeLists.txt  README.md  project2.sln
CmakeDBclient/: CMakeLists.txt  CmakeDBclient.cpp  CmakeDBclient.h  adres.txt
project/: CMakeLists.txt  project2.cpp
project2/: CMakeLists.txt  SClient.cpp  SClient.h  project2.cpp  project2.h  project2.vcxproj  project2.vcxproj.filters
